Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-6015

HA Python QMF console raises exception due to HA subscriptions.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.28
    • 0.31
    • C++ Clustering
    • None

    Description

      A python qmf console that queries subscriptions can crash when used with a HA cluster.

      To reproduce:

      1. Start a 3 node HA cluster
      2. qpid-send -b 20.0.20.200 -m 1000 -a 'qq;

      {create:always}

      '
      3. Kill the primary, let the cluster fail over.
      4. qpid-stat -u -b 20.0.20.200

      Result:
      Failed: IndexError - pop from empty list

      Expected result:
      No error.

      See also: https://bugzilla.redhat.com/show_bug.cgi?id=1117708

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: