QPID-6015: HA Python QMF console raises exception due to HA subscriptions.

One of the arguments in a HA subscription (qpid.ha-ids) is binary encoded data,
however it was being passed as a string type in the arguments map.  This caused
python qmf console clients to choke when they tried to utf-decode the data.

Fix is to pass the data using the vbin32 type which is intended for binary data.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1618712 13f79535-47bb-0310-9956-ffa450edef68